# CalcPrimes

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: calcprime.cpp  calcprime.h  calcprime_form.cpp  calcprime_form.h  calcprime_form.ui  main.cpp
